# LHCOAnalysis

./: CHANGES  LHCOAnalysis.cabal  build.conf  builddep.sh  compile  shell.nix  versioncheck.hs
rootcode/: makehist.cpp  makehist.h
src/: BinaryMake.hs  LHCOAnalysis.hs  Main.hs
src/HEP/Parser/: LHCOAnalysis.hs
src/HEP/Parser/LHCOAnalysis/: Analysis.hs  Cuts.hs  FetchBinary.hs  MakeBinary.hs  Parse.hs
src/HEP/Parser/LHCOAnalysis/Parse/: Old.hs
src/LHCOAnalysis/: Analysis.hs  FetchBinary.hs  MakeBinary.hs  NewAnalysis.hs  Parse.hs  PhysObj.hs  ROOTApp.hsc  Utility.hs
src/LHCOAnalysis/Analysis/: CutSets.hs  Hist.hs  Plot.hs
src/LHCOAnalysis/Batch/: Parallel.hs
test/: newtest.hs  parsertest.hs  parsertest2.hs  test.hs
trash/: FetchBinary.hs  MakeBinary.hs  PhysObj.hs  test.hs
