Name:		LHCOAnalysis
Version:	0.2
Synopsis:	LHC Olympics File Analysis Code
Description: 	LHC Olympics Analysis Code. It can create binary bytestring 
		file for LHC Olympics format data and analyze it and create 
		histograms with predefined cut sets. 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4, binary, transformers, bytestring, array, containers, 
		vector, 
		bytestring-lexing, split, directory,hmatrix, Computation, HROOT, 
		ListLike, iteratee
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all


Exposed-Modules: 
		 LHCOAnalysis,
		 LHCOAnalysis.Analysis, 
		 LHCOAnalysis.Analysis.CutSets, 
		 LHCOAnalysis.Utility,
		 LHCOAnalysis.Parse,
		 LHCOAnalysis.PhysObj,
		 LHCOAnalysis.MakeBinary,
		 LHCOAnalysis.FetchBinary
		 
		 
