Name:		LHCOAnalysis
Version:	0.5.1.1
Synopsis:	LHC Olympics File Analysis Code
Description: 	LHC Olympics Analysis Code. It can create binary bytestring 
		file for LHC Olympics format data and analyze it and create 
		histograms with predefined cut sets. 
License:        BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4, binary, transformers, bytestring, array, containers, 
		vector, mtl > 2, 
		bytestring-lexing, split, directory,  
		ListLike, iteratee>0.4,  iteratee-util > 0.0.2,
                hmatrixIW>0.11, LHCOAnalysis-type
--Computation==0.1, 
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all


Exposed-Modules: 
		 HEP.Parser.LHCOAnalysis,
         	 HEP.Parser.LHCOAnalysis.Analysis, 
		 HEP.Parser.LHCOAnalysis.Parse,
		 HEP.Parser.LHCOAnalysis.MakeBinary,
		 HEP.Parser.LHCOAnalysis.FetchBinary,
                 HEP.Parser.LHCOAnalysis.Cuts 
		 
		 
